[gd_scene load_steps=10 format=2]

[ext_resource path="res://UI/Menus/Pause/Pause.gd" type="Script" id=1]
[ext_resource path="res://UI/Fonts/yoster.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://UI/Score Indicator/Score Indicator.tscn" type="PackedScene" id=3]
[ext_resource path="res://UI/Style/Button.tscn" type="PackedScene" id=4]

[sub_resource type="Animation" id=1]
resource_name = "Hide"
tracks/0/type = "bezier"
tracks/0/path = NodePath("Background:color:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0.564706, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Score:margin_top")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 512, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Pause:margin_top")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( -116, -0.25, 0, 0.25, 0, 386, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("Pause:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("Score:modulate:a")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("Exit:anchor_left")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, -0.2, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/6/type = "bezier"
tracks/6/path = NodePath("Exit:anchor_right")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, -0.2, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/7/type = "bezier"
tracks/7/path = NodePath("Exit:modulate:a")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/8/type = "bezier"
tracks/8/path = NodePath("Title:anchor_top")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 2, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/9/type = "bezier"
tracks/9/path = NodePath("Title:anchor_bottom")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 2, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/10/type = "bezier"
tracks/10/path = NodePath("Title:modulate:a")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}

[sub_resource type="Animation" id=2]
length = 2.5
tracks/0/type = "bezier"
tracks/0/path = NodePath("Background:color:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0.564706, -0.551577, 0.571459, 0.318257, -0.329729 ),
"times": PoolRealArray( 0, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Pause:margin_top")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 512, -0.25, 0, 0.25, 0, -116, -0.650395, -433.188, 0.00944608, 6.29146 ),
"times": PoolRealArray( 0.5, 1.5 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Score:margin_top")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 384, -0.25, 0, 0.25, 0, 0, -0.411609, -308.399, 0.00839823, 6.2924 ),
"times": PoolRealArray( 1, 2 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("Pause:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.5, 1.5 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("Score:modulate:a")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 1, 2 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("Exit:anchor_left")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( -0.2, -0.25, 0, 0.25, 0, 0, -0.7, 0.5, 0.25, -0.2 ),
"times": PoolRealArray( 0, 1 )
}
tracks/6/type = "bezier"
tracks/6/path = NodePath("Exit:anchor_right")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"points": PoolRealArray( -0.2, -0.25, 0, 0.25, 0, 0, -0.7, 0.5, 0.25, -0.2 ),
"times": PoolRealArray( 0, 1 )
}
tracks/7/type = "bezier"
tracks/7/path = NodePath("Exit:modulate:a")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/8/type = "bezier"
tracks/8/path = NodePath("Title:anchor_top")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"points": PoolRealArray( 1.2, -0.25, 0, 0.25, 0, 1, -0.7, -0.5, 0.25, 0.2 ),
"times": PoolRealArray( 1.5, 2.5 )
}
tracks/9/type = "bezier"
tracks/9/path = NodePath("Title:anchor_bottom")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"points": PoolRealArray( 1.2, -0.25, 0, 0.25, 0, 1, -0.7, -0.5, 0.25, 0.2 ),
"times": PoolRealArray( 1.5, 2.5 )
}
tracks/10/type = "bezier"
tracks/10/path = NodePath("Title:modulate:a")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 1.5, 2.5 )
}

[sub_resource type="DynamicFont" id=3]
size = 72
outline_size = 3
outline_color = Color( 0.960784, 1, 0.909804, 1 )
font_data = ExtResource( 2 )

[sub_resource type="InputEventAction" id=4]
action = "menu"
pressed = true

[sub_resource type="ShortCut" id=5]
shortcut = SubResource( 4 )

[node name="Pause" type="CanvasLayer"]
pause_mode = 2
layer = 2
script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_default_blend_time = 0.2
playback_speed = 1.5
anims/Hide = SubResource( 1 )
anims/Show = SubResource( 2 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pause" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -112.0
margin_top = 386.0
margin_right = 116.0
margin_bottom = -44.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.0941176, 0.0784314, 0.145098, 1 )
text = "Pause"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" parent="." instance=ExtResource( 3 )]
modulate = Color( 1, 1, 1, 0 )
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = 512.0
margin_right = 0.0
margin_bottom = 16.5
text = "score"
highscore = true

[node name="Exit" parent="." instance=ExtResource( 4 )]
modulate = Color( 1, 1, 1, 0 )
anchor_left = -0.2
anchor_right = -0.2
anchor_bottom = 0.0
margin_left = 16.0
margin_top = 16.0
margin_right = 64.0
margin_bottom = 64.0
rect_pivot_offset = Vector2( 24, 24 )
shortcut = SubResource( 5 )
text = "X"

[node name="Title" parent="." instance=ExtResource( 4 )]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 2.0
anchor_right = 0.5
anchor_bottom = 2.0
margin_left = -128.0
margin_top = -88.0
margin_right = 128.0
margin_bottom = -24.0
rect_pivot_offset = Vector2( 128, 32 )
text = "Quit to Title"

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="button_down" from="Exit" to="." method="_on_Exit_button_down"]
[connection signal="button_down" from="Title" to="." method="_on_Title_button_down"]
